add splash screen android and ios

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,3 +1,4 @@
 <resources>
-    <color name="bootsplash_background">#6C141B</color>
+    <color name="bootsplash_background_brand">#540E1F</color>
+    <color name="bootsplash_background_dark">#000000</color>
 </resources>
