--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,30 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+        <!-- <item name="android:editTextBackground">@drawable/rn_edit_text_material</item> -->
+        <item name="android:editTextBackground">@android:color/transparent</item>
+    </style>
+
+
+    <!-- BOOTSPLASH CONF  -->
+    <!-- BootTheme should inherit from Theme.BootSplash or Theme.BootSplash.EdgeToEdge -->
+    <style name="BootTheme" parent="Theme.BootSplash.EdgeToEdge">
+        <!-- <item name="android:statusBarColor" tools:targetApi="m">@color/bootsplash_background</item> -->
+        
+        <!-- Apply color + style to the status bar (true = dark-content, false = light-content) -->
+        <!-- <item name="android:windowLightStatusBar" tools:targetApi="m">true</item> -->
+
+        <item name="bootSplashBackground">@color/bootsplash_background_dark</item>
+        <item name="bootSplashLogo">@drawable/bootsplash_logo</item>
+        <!-- <item name="android:windowBackground">@drawable/random_png</item> -->
+
+
+        <!-- <item name="bootSplashBrand">@drawable/bootsplash_brand</item> Only if you have a brand image -->
+        
+        <item name="postBootSplashTheme">@style/AppTheme</item>
     </style>
 
 </resources>
